--- a/src/main/resources/static/test/ess_test2.html
+++ b/src/main/resources/static/test/ess_test2.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <META HTTP-EQUIV="refresh" CONTENT="60">
+    <!--<META HTTP-EQUIV="refresh" CONTENT="60">-->
     <title>KED 안전관리플랫폼</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-
-    <!-- Favicon -->
-    <link href="../theme/img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,12 +42,31 @@
 
     <div id="sidebar"></div>
     <!-- Content Start -->
-    <div id="content" class="content">
+    <div class="content">
         <div id="navbar"></div>
-        <div id="map" style="width: 500px; height: 500px;"></div>
+        
+                <!-- Content Wrapper -->
+        <div id="content-wrapper" class="d-flex flex-column">
+
+            <!-- Main Content -->
+            <div id="content">
+                <!-- End of Topbar -->
+
+                <!-- Begin Page Content -->
+                <div class="container-fluid mt-4">
+                    <div class="row">
+
+                    </div>
+                </div>
+                <!-- /.container-fluid -->
+            </div>
+            <!-- End of Main Content -->
+    </div>
     </div>
     <!-- Content End -->
 
+    <!-- Back to Top -->
+    <!--    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>-->
 </div>
 
 <!-- JavaScript Libraries -->
@@ -64,20 +79,87 @@
 <script src="../theme/lib/tempusdominus/js/moment.min.js"></script>
 <script src="../theme/lib/tempusdominus/js/moment-timezone.min.js"></script>
 <script src="../theme/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+<!-- min -->
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for all pages-->
+<script src="js/sb-admin-2.min.js"></script>
+
 <!-- Include -->
 <script src="../js/include.js"></script>
 <!-- Clock -->
 <script src="../js/clock.js"></script>
-<!-- Map -->
-<script>
-    var mapContainer = document.getElementById('map'), // 지도를 표시할 div
-        mapOption = {
-            center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-            level: 3 // 지도의 확대 레벨
-        };
 
-    // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
-    var map = new kakao.maps.Map(mapContainer, mapOption);
+<script>
+
+    var daycycle = [];
+
+    for(var i = 0; i < 10; i++){
+        var date = new Date();
+        var a = new Date(date.setDate(date.getDate() - i));
+        var b = a.getMonth()+1 +'.'+a.getDate();
+
+        daycycle[i] = b;
+    }
+
+/*    let rate = [];
+    let status = [];
+    let count = [];
+
+    status = [[${status}]]; count = [[${count}]];
+
+    for(var j = 0; j < 10; j++){
+        rate[j] = Math.round(status[j]/count[j]*100, 2);
+        if(isNaN(rate[j])){
+            rate[j] = 0;
+        }
+    }*/
+
+    Highcharts.chart('chart_ess', {
+        colors : ['#1376E9'],
+        chart: {type: 'area'},
+        title: {text: ' '},
+        xAxis: {
+            categories: [daycycle[9], daycycle[8], daycycle[7], daycycle[6], daycycle[5], daycycle[4], daycycle[3], daycycle[2], daycycle[1], daycycle[0]]
+        },
+        yAxis: {
+            labels : {
+                formatter : function() {
+                    return this.value + ' %';
+                }
+            },
+            max: 100,
+            title: {text: ' '}
+        },
+        legend: {enabled: false},
+        // 하단 highchart.com 글씨 삭제
+        credits: {enabled: false},
+        // 상단 context menu 제거
+        exporting: {enabled: false},
+        tooltip: {valueSuffix:'%'},
+        plotOptions: {
+            series: {},
+            area: {
+                stacking: 'normal',
+                lineColor: '#FFFFFF',
+                lineWidth: 1,
+                marker: {
+                    lineWidth: 1,
+                    lineColor: '#FFFFFF'
+                }
+            }
+        },
+        series: [{
+            name: 'Percent',
+            // data: [rate[9], rate[8], rate[7], rate[6], rate[5], rate[4], rate[3], rate[2], rate[1], rate[0]]
+            data: [1,2,3,4,5,6,7,8,9,10]
+        }]
+    });
 </script>
 </body>
 
