--- a/src/main/resources/static/test/ess_test.html
+++ b/src/main/resources/static/test/ess_test.html
@@ -48,7 +48,7 @@
     <div class="content">
         <div id="navbar"></div>
 
-                <!-- Content Wrapper -->
+        <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
 
             <!-- Main Content -->
@@ -59,7 +59,7 @@
                 <div class="container mt-4 px-5">
                     <div class="row">
                         <div class="col-5">
-                            <div class="card">
+                            <div class="card h-100">
                                 <h6 class="m-3 font-weight-bold text-black-50">내부 환경 정보</h6>
                                 <div class="card-body">
                                     <div class="row justify-content-center">
@@ -67,18 +67,16 @@
                                             <div class="row text-center">
                                                 <i class="bi bi-thermometer-half fs-3"></i>
                                             </div>
-                                            <div class="row justify-content-center">좋음</div>
                                             <div class="row justify-content-center">15.86℃</div>
                                         </div>
                                         <div class="col-md-3">
                                             <div class="row text-center">
                                                 <i class="bi bi-droplet-half fs-3"></i>
                                             </div>
-                                            <div class="row justify-content-center">좋음</div>
                                             <div class="row justify-content-center">43.71%</div>
                                         </div>
                                         <div>
-                                            <table class="table text-center mt-3">
+                                            <table class="table text-center mt-3 align-middle">
                                                 <thead>
                                                 <tr>
                                                     <th scope="col"></th>
@@ -110,8 +108,8 @@
                             </div>
                         </div>
                         <div class="col-7 ps-5">
-                            <div class="card">
-                                    <h6 class="m-3 font-weight-bold text-black-50">ESS SAFETY STATUS</h6>
+                            <div class="card h-100">
+                                <h6 class="m-3 font-weight-bold text-black-50">ESS SAFETY STATUS</h6>
                                 <div class="card-body text-center">
                                     <img src="../asset/images/s-images/sms.png" style="width: 356px;" class="mb-3">
                                 </div>
@@ -120,30 +118,30 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-5">
-                            <div class="card">
-                                    <h6 class="m-3 font-weight-bold text-black-50">유해가스</h6>
+                            <div class="card h-100">
+                                <h6 class="m-3 font-weight-bold text-black-50">유해가스</h6>
                                 <div class="card-body">
-                                    <table class="table text-center fs-6 mt-2 mb-3">
+                                    <table class="table text-center fs-6 mt-2 align-middle h-100">
                                         <tbody>
                                         <tr>
                                             <th scope="row">VOC</th>
-                                            <td><p>43.0</p></td>
-                                            <td><p>ppm</p></td>
+                                            <td>43.0</td>
+                                            <td>ppm</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">NH3</th>
-                                            <td><p>2.35</p></td>
-                                            <td><p>ppm</p></td>
+                                            <td>2.35</td>
+                                            <td>ppm</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">CO2</th>
-                                            <td><p>13.0</p></td>
-                                            <td><p>ppm</p></td>
+                                            <td>13.0</td>
+                                            <td>ppm</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">CO</th>
-                                            <td><p>125.72</p></td>
-                                            <td><p>ppm</p></td>
+                                            <td>125.72</td>
+                                            <td>ppm</td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -151,23 +149,31 @@
                             </div>
                         </div>
                         <div class="col-7 ps-5">
-                            <div class="card">
-                                    <h6 class="m-3 font-weight-bold text-black-50">BATTERY STATUS</h6>
+                            <div class="card h-100">
+                                <h6 class="m-3 font-weight-bold text-black-50">BATTERY STATUS</h6>
                                 <div class="card-body">
                                     <div class="card-body">
-                                        <table class="table text-center fs-6 align-middle">
+                                        <table class="table text-center fs-6 align-middle" style="height: 20vh ;table-layout: fixed">
                                             <tbody>
                                             <tr>
-                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/volt_icon.png"><p>전압</p></th>
-                                                <td><span>43.33 (V)</span></td>
-                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/ampere_icon.png"><p>전류</p></th>
-                                                <td><p>2.35</p></td>
+                                                <th scope="row"><img style="width: 40px" src="../asset/images/s-images/volt_icon.png"></th>
+                                                <td>전압</td>
+                                                <td>43.33</td>
+                                                <td>V</td>
+                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/ampere_icon.png"></th>
+                                                <td>전류</td>
+                                                <td>2.35</td>
+                                                <td>A</td>
                                             </tr>
                                             <tr>
-                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/charge_icon.png"><p>충전량</p></th>
-                                                <td><p>13.0</p></td>
-                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/discharge_icon.png"><p>방전량</p></th>
-                                                <td><p>13.0</p></td>
+                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/charge_icon.png"></th>
+                                                <td>충전량</td>
+                                                <td>13.0</td>
+                                                <td>kWh</td>
+                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/discharge_icon.png"></th>
+                                                <td>방전량</td>
+                                                <td>13.0</td>
+                                                <td>kWh</td>
                                             </tr>
                                             </tbody>
                                         </table>
@@ -177,21 +183,21 @@
                         </div>
                     </div>
                 </div>
-                </div>
-
-                </div>
-
-                </div>
-                </div>
-                <!-- /.container-fluid -->
             </div>
-            <!-- End of Main Content -->
-    </div>
-    </div>
-    <!-- Content End -->
 
-    <!-- Back to Top -->
-    <!--    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>-->
+        </div>
+
+    </div>
+</div>
+<!-- /.container-fluid -->
+</div>
+<!-- End of Main Content -->
+</div>
+</div>
+<!-- Content End -->
+
+<!-- Back to Top -->
+<!--    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>-->
 </div>
 
 <!-- JavaScript Libraries -->
